# s3sh

./: Cargo.toml  README.md
src/: buckets.rs  client.rs  lib.rs  main.rs  objects.rs  ui.rs
tests/: buckets_tests.rs  objects_tests.rs
