[package]
name = "s3sh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.0.0"
aws-sdk-s3 = "1.0.0"
aws-sdk-sso = "1.50.0"
aws-sdk-ssooidc = "1.50.0"
aws-sdk-sts = "1.50.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.3"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
aws-smithy-runtime = { version = "1.9.4", features = ["test-util"] }
aws-smithy-runtime-api = "1.9.2"
aws-smithy-types = "1.3.4"
http = "1.4.0"
tempfile = "3.23.0"
